--- a/pmEvent/pmEvent-Info.plist
+++ b/pmEvent/pmEvent-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>ical.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>mycompany.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
